--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="container">
             <div class="subtitle subtitle_white promo__subtitle">Меня зовут Адрохман Гайрбеков</div>
-            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Самара
+            <h1 class="title_fz48 promo__title">Я web-разработчик из города Самара
             </h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">
@@ -147,6 +147,45 @@
             </div>
         </div>
     </section>
+
+
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <img src="img/main_photo.jpg" alt="my-photo" class="about__img">
+                <div class="about__me">
+                    <div class="subtitle about__subtitle">Про меня</div>
+                    <div class="title">Меня зовут Адрохман</div>
+                    <div class="divider"></div>
+                    <div class="about__me-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+                </div>
+                <div class="about__skills">
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                          <img src="icons/about_me/web_development.svg" alt="web-development" class="about__skills-img">
+                        </div>
+                        <div class="subtitle subtitle_fz14">Web-разработка</div>
+                        <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    </div>
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img src="icons/about_me/mobile_dev.svg" alt="mobile-development" class="about__skills-img">
+                        </div>
+                        <div class="subtitle subtitle_fz14">Разработка приложений</div>
+                        <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    </div>
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img src="icons/about_me/design.svg" alt="design" class="about__skills-img">
+                        </div>
+                        <div class="subtitle subtitle_fz14">UI/UX Design</div>
+                        <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="js/index.js"></script>
 </body>
