--- a/src/index.html
+++ b/src/index.html
@@ -134,8 +134,8 @@
             <span></span>
         </div>
         <div class="container">
-            <div class="subtitle subtitle_white promo__subtitle">Меня зовут Адрохман Гайрбеков</div>
-            <h1 class="title_fz48 promo__title">Я web-разработчик из города Самара
+            <div class="title title_fz16-white promo__subtitle">Меня зовут Адрохман Гайрбеков</div>
+            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Самара
             </h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">
@@ -154,8 +154,8 @@
             <div class="about__wrapper">
                 <img src="img/main_photo.jpg" alt="my-photo" class="about__img">
                 <div class="about__me">
-                    <div class="subtitle about__subtitle">Про меня</div>
-                    <div class="title">Меня зовут Адрохман</div>
+                    <div class="title title_fz16 about__subtitle">Про меня</div>
+                    <h2 class="title">Меня зовут Адрохман</h2>
                     <div class="divider"></div>
                     <div class="about__me-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
                 </div>
@@ -164,23 +164,103 @@
                         <div class="about__skills-circle">
                           <img src="icons/about_me/web_development.svg" alt="web-development" class="about__skills-img">
                         </div>
-                        <div class="subtitle subtitle_fz14">Web-разработка</div>
+                        <div class="title title_fz14">Web-разработка</div>
                         <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                     </div>
                     <div class="about__skills-item">
                         <div class="about__skills-circle">
                             <img src="icons/about_me/mobile_dev.svg" alt="mobile-development" class="about__skills-img">
                         </div>
-                        <div class="subtitle subtitle_fz14">Разработка приложений</div>
+                        <div class="title title_fz14">Разработка приложений</div>
                         <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                     </div>
                     <div class="about__skills-item">
                         <div class="about__skills-circle">
                             <img src="icons/about_me/design.svg" alt="design" class="about__skills-img">
                         </div>
-                        <div class="subtitle subtitle_fz14">UI/UX Design</div>
+                        <div class="title title_fz14">UI/UX Design</div>
                         <div class="about__skills-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="resume">
+        <div class="container">
+            <div class="subtitle resume__subtitle">Опыт</div>
+            <h2 class="title resume__title">Чем я буду полезен</h2>
+            <div class="divider"></div>
+            <div class="resume__wrapper">
+                <div class="resume__column">
+                    <h3 class="title title_fz20 resume__column-title">
+                        Образование
+                    </h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/university.svg" alt="university">
+                                    </div>
+                                    <h4 class="title title_fz14">МГТУ им. Н. Э. Баумана</h4>
+                                    <div class="resume__item-location">Диплом магистра | Москва (2014-2020)</div>
+                                </div>
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/courses.svg" alt="udemy">
+                                    </div>
+                                    <h4 class="title title_fz14">Udemy</h4>
+                                    <div class="resume__item-location">Курсы по Web-разработке </div>
+                                </div>
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="resume__column">
+                    <h3 class="title title_fz20 resume__column-title">
+                        Опыт работы
+                    </h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/developer.svg" alt="developer">
+                                    </div>
+                                    <h4 class="title title_fz14">Front-End Developer</h4>
+                                    <div class="resume__item-location">EPAM | Москва (2018-2019)</div>
+                                </div>
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/designer.svg" alt="designer">
+                                    </div>
+                                    <h4 class="title title_fz14">UI/UX Designer</h4>
+                                    <div class="resume__item-location">Squad Team | Москва (2018)</div>
+                                </div>
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
