created a skills section

--- a/src/index.html
+++ b/src/index.html
@@ -154,8 +154,8 @@
             <div class="about__wrapper">
                 <img src="img/main_photo.jpg" alt="my-photo" class="about__img">
                 <div class="about__me">
-                    <div class="title title_fz16 about__subtitle">Про меня</div>
-                    <h2 class="title">Меня зовут Адрохман</h2>
+                    <h2 class="title title_fz16 about__title">Про меня</h2>
+                    <div class="title">Меня зовут Адрохман</div>
                     <div class="divider"></div>
                     <div class="about__me-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
                 </div>
@@ -188,8 +188,8 @@
 
     <section class="resume">
         <div class="container">
-            <div class="subtitle resume__subtitle">Опыт</div>
-            <h2 class="title resume__title">Чем я буду полезен</h2>
+            <div class="title title_fz16 resume__title">Опыт</div>
+            <h2 class="title resume__subtitle">Чем я буду полезен</h2>
             <div class="divider"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -261,6 +261,36 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="container">
+            <h2 class="title title_fz16 skills__title">Навыки</h2>
+            <div class="title skills__subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+            <div class="skills__wrapper">
+                <div class="skills__item">
+                    <img src="icons/skills/html5.svg" alt="html5" class="skills__img">
+                    <div class="title title_fz14 skills__item-subtitle">HTML5</div>
+                    <div class="skills__descr">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/css3.svg" alt="css3" class="skills__img">
+                    <div class="title title_fz14 skills__item-subtitle">CSS3</div>
+                    <div class="skills__descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/js.svg" alt="js" class="skills__img">
+                    <div class="title title_fz14 skills__item-subtitle">JavaScript</div>
+                    <div class="skills__descr">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                </div>
+                <div class="skills__item">
+                    <img src="icons/skills/angular.svg" alt="angular" class="skills__img">
+                    <div class="title title_fz14 skills__item-subtitle">AngularJS</div>
+                    <div class="skills__descr">Это JavaScript-фреймворк с открытым исходным кодом. Предназначен для разработки одностраничных приложений. С его помощью мы можем создать максимально интерактивный продукт именно под ваши цели</div>
                 </div>
             </div>
         </div>
