--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
                 <a href="#" class="promo__link btn">
                     Портфолио
                 </a>
-                <a href="#" class="promo__link">
+                <a href="#about" class="promo__link">
                     Про меня
                 </a>
             </div>
@@ -165,15 +165,25 @@
     </section>
 
 
-    <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="my-photo">
+                    <!-- <img srcset="img/main_photo-min.jpg 300w,
+                                 img/main_photo.jpg 400w"
+                            sizes="(max-width: 576px) 300px,
+                                   (min-width: 577) 400px"
+                    src="img/main_photo.jpg" alt="my-photo"> -->
+
+                    <picture>
+                        <source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
+                        <source media="(min-width: 576px)" srcset="img/main_photo.jpg">
+                        <img src="img/main_photo.jpg" alt="my-photo">
+                    </picture>
                 </div>
                 <div class="about__me">
                     <h2 class="title title_fz16 about__title">Про меня</h2>
-                    <div class="title">Меня зовут Адрохман</div>
+                    <div class="title title_fz36">Меня зовут Адрохман</div>
                     <div class="divider"></div>
                     <div class="about__me-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
                 </div>
@@ -207,7 +217,7 @@
     <section class="resume">
         <div class="container">
             <div class="title title_fz16 title__section-title">Опыт</div>
-            <h2 class="title title__section-subtitle">Чем я буду полезен</h2>
+            <h2 class="title title_fz36 title__section-subtitle">Чем я буду полезен</h2>
             <div class="divider"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -287,7 +297,7 @@
     <section class="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
-            <div class="title title__section-subtitle">Что я использую в работе</div>
+            <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
             <div class="divider"></div>
             <div class="skills__wrapper">
                 <div class="skills__item">
@@ -317,7 +327,7 @@
     <section class="portfolio">
         <div class="container">
             <div class="title title_fz16 title__section-title">Портфолио</div>
-            <div class="title title__section-subtitle">Мои работы</div>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
             <div class="divider"></div>
 
             <div class="portfolio__wrapper">
@@ -351,7 +361,7 @@
                 </div>
                 <div class="contacts__descr">
                     <h2 class="title title_fz16 contacts__title">Контакты</h2>
-                    <div class="title contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
                     <div class="divider"></div>
                     <div class="title title_fz14 contacts__text">Удобным для вас способом:</div>
                     <div class="contacts__social">
@@ -412,7 +422,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
 
     <a href="#up" class="pageup ">
         <img src="icons/up.svg" alt="chevron-up">
