--- a/src/index.html
+++ b/src/index.html
@@ -415,7 +415,7 @@
                             <button class="contacts__btn btn">Отправить сообщение</button>
                             <div class="contacts__policy">
                                 <input name="checkbox" type="checkbox">
-                                <label>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></label>
+                                <label>Я согласен(а) с <a href="policy.html">политикой конфиденциальности</a></label>
                             </div>
                         </div>
                     </form>
