--- a/src/index.html
+++ b/src/index.html
@@ -76,27 +76,27 @@
             <nav>
                 <ul class="menu__list">
                     <li class="menu__link">
-                        <a href="#">
+                        <a href="#about">
                             ПРО МЕНЯ
                         </a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">
+                        <a href="#exp">
                             МОЙ ОПЫТ
                         </a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">
+                        <a href="#skills">
                             МОИ НАВЫКИ
                         </a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">
+                        <a href="#portfolio">
                             МОИ РАБОТЫ
                         </a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">
+                        <a href="#contacts">
                             КОНТАКТЫ
                         </a>
                     </li>
@@ -214,7 +214,7 @@
         </div>
     </section>
 
-    <section class="resume">
+    <section id="exp" class="resume">
         <div class="container">
             <div class="title title_fz16 title__section-title">Опыт</div>
             <h2 class="title title_fz36 title__section-subtitle">Чем я буду полезен</h2>
@@ -294,7 +294,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section id="skills" class="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -324,7 +324,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="title title_fz16 title__section-title">Портфолио</div>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -353,7 +353,7 @@
         </div>
     </section>
 
-    <section class="contacts">
+    <section id="contacts" class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
